<resources>
    <string name="app_name">Purdue Menu</string>
    <string name="app_tagline">Dining court menus and more</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="nav_today">Today</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_dining_courts">Dining Courts</string>
    <string name="nav_restaurants">Restaurants</string>
    <string name="nav_cafes">Cafés</string>
    <string name="nav_markets">Markets</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="network_error">Could not reach the network; please try again.</string>
    <string name="http_error">Could not reach Purdue HFS; please try again.</string>
    <string name="conversion_error">Encountered unexpected data; please try again.</string>
    <string name="unexpected_error">An unknown error occurred; please try again.</string>
    <string name="closed_error">Closed</string>
    <string name="no_app_error">No app available to handle that request.</string>
    <string name="retry">Retry</string>
    <string name="menu_map">Map</string>
    <string name="menu_call">Call</string>
    <string name="view_menu">View Menu</string>
    <string name="description">Description</string>
    <string name="veg">Vegetarian item</string>
    <string name="nonveg">Non-vegetarian item</string>
    <string name="ingredients">Ingredients</string>
    <string name="noinfo">No information available</string>
    <string name="allergens">Common Allergens</string>
    <string name="unknownAllergens">No common allergens</string>
    <string name="nutrition">Nutrition Facts</string>
    <string name="noFavoriteDiningCourt">You haven\'t yet chosen a favorite dining court. When you select your favorite dining court from the settings menu, you\'ll see its menu here.</string>
    <string name="nextMeal">Next meal</string>
    <string name="favoriteItems">Favorite items</string>
    <string name="noFavoriteItems">None of your favorite items are being served today. Why not choose a few more favorites? When any of your favorites are being served, they\'ll show up right here.</string>
    <string name="noMeal">Your favorite dining court is closed for today. Check back tomorrow.</string>
    <string name="menu_favorite">Favorite</string>
    <string name="favorite_add">%s added to favorites</string>
    <string name="favorite_remove">%s removed from favorites</string>

    <array name="favoriteDiningCourtPrefs">
        <item>None</item>
        <item>Earhart</item>
        <item>Ford</item>
        <item>Hillenbrand</item>
        <item>Wiley</item>
        <item>Windsor</item>
    </array>
</resources>
