<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_today"
            android:checked="true"
            android:icon="@drawable/ic_today_black_24dp"
            android:title="@string/nav_today"/>
        <!--<item-->
            <!--android:id="@+id/nav_item_favorites"-->
            <!--android:icon="@drawable/ic_favorite_black_24dp"-->
            <!--android:title="@string/nav_favorites"/>-->
        <item
            android:id="@+id/nav_item_dining_courts"
            android:icon="@drawable/ic_local_dining_black_24dp"
            android:title="@string/nav_dining_courts"/>
        <item
            android:id="@+id/nav_item_restaurants"
            android:icon="@drawable/ic_food_black_24dp"
            android:title="@string/nav_restaurants"/>
        <item
            android:id="@+id/nav_item_cafes"
            android:icon="@drawable/ic_local_cafe_black_24dp"
            android:title="@string/nav_cafes"/>
        <item
            android:id="@+id/nav_item_markets"
            android:icon="@drawable/ic_store_black_24dp"
            android:title="@string/nav_markets"/>
        <!--<item-->
            <!--android:id="@+id/nav_item_settings"-->
            <!--android:icon="@drawable/ic_settings_black_24dp"-->
            <!--android:title="@string/nav_settings"/>-->
        <item
            android:id="@+id/nav_item_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/nav_about"/>
    </group>
</menu>