<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:theme="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:insetForeground="@color/primary_dark">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <include layout="@layout/include_error" />

        <include layout="@layout/include_progress" />

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/contentView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/itemTitle"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <TextView
                    android:id="@+id/itemVeg"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary_text"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <android.support.v7.widget.CardView
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    card_view:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="14sp"
                            android:singleLine="true"
                            android:textColor="@color/primary_text"
                            android:text="@string/allergens" />

                        <TextView
                            android:id="@+id/allergens"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/secondary_text" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    card_view:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="14sp"
                            android:singleLine="true"
                            android:textColor="@color/primary_text"
                            android:text="@string/nutrition" />

                        <TextView
                            android:id="@+id/nutrition"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/secondary_text" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    card_view:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="14sp"
                            android:singleLine="true"
                            android:textColor="@color/primary_text"
                            android:text="@string/ingredients" />

                        <TextView
                            android:id="@+id/ingredients"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/secondary_text" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <include layout="@layout/include_appbar" />

    </android.support.design.widget.CoordinatorLayout>

</android.support.v4.widget.DrawerLayout>
